syntax = "proto3";

package products;

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  double stock = 5;
}

message ListProductsRequest {
  string request_user_id = 1;
  int32 page = 2;
  int32 limit = 3;
}

message ListProductsResponse {
  repeated Product products = 1;
  int32 current_page = 2;
  int32 page_items = 3;
  int32 total_items = 4;
  bool has_previous_page = 5;
  int32 previous_page = 6;
  bool has_next_page = 7;
  int32 next_page = 8;
}

message GetProductRequest {
  string request_user_id = 1;
  string product_id = 2;
}

message GetProductResponse {
  Product product = 1;
}

message CreateProductRequest {
  string request_user_id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  double stock = 5;
}

message CreateProductResponse {
  Product new_product = 1;
}

message UpdateProductRequest {
  string request_user_id = 1;
  string product_id = 2;
  optional string new_name = 3;
  optional string new_description = 4;
  optional double new_price = 5;
  optional double new_stock = 6;
}

message UpdateProductResponse {
  Product updated_product = 1;
}

message DeleteProductRequest {
  string request_user_id = 1;
  string product_id = 2;
}

message DeleteProductResponse {
  bool success = 1;
}

service ProductService {
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse) {}
  rpc GetProduct(GetProductRequest) returns (GetProductResponse) {}
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse) {}
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse) {}
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse) {}
}
